--- a/index.html
+++ b/index.html
@@ -25,29 +25,30 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://www.w3schools.com/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">
+          <img src="https://color-hex.org/colors/4050b7.png" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2>Jannie Tétreault</h2>
+            <h2 style="color: #FFFF; font-weight: bold;">Jannie Tétreault</h2>
           </div>
         </div>
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Infirmière clinicienne</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Saint-Basile-le-Grand, QC</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>jannie.tetreault.hsj@ssss.gouv.qc.ca</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i><a href= "mailto:jannie.tetreault.hsj@ssss.gouv.qc.ca">jannie.tetreault.hsj@ssss.gouv.qc.ca</a></p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>514-917-4516</p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Compétences informatiques</b></p>
-          <p>Word</p>
-          <p>Excel</p>
-          <br>
-
+          <ul>
+            <li>Word</li>
+            <li>Excel</li>
+          </ul>
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-indigo"></i>Langues</b></p>
           <p>Français</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-indigo" style="height:24px;width:100%"></div>
           </div>
           <p>Anglais</p>
+          <p>Cours de langue pour le personnel de la santé réussi au niveau intermédiaire (Université McGill).</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-indigo" style="height:24px;width:80%"></div>
           </div>
@@ -68,7 +69,7 @@
           <h6><i class="fa-regular fa-hospital fa-fw w3-margin-right"></i>Hôpital Sainte-Justine <span class="w3-text-indigo" style="text-align: right; float: right;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Juin 2018 &#8212; <span class="w3-tag w3-indigo w3-round">Présent</span></span> </h6>
           <ul>
             <li>Évaluer la condition physique et mentale du patient.</li>
-            <li>Accompagner et soutenir le patient et la famille.</li>
+            <li>Accompagner et soutenir le patient et sa famille.</li>
             <li>Développer une autonomie et un sens de l'organisation.</li>
             <li>Orienter et aider les nouvelles recrues sur le terrain.</li>
           </ul>
@@ -108,19 +109,22 @@
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Formation</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Baccalauréat en science infirmière &#8212; Formation initiale</b></h5>
-          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mai 2018</h6>
+          <h5><b><span class="w3-opacity">Baccalauréat en science infirmière &#8212; Formation initiale</span></b><span class="w3-text-indigo" style="text-align: right; float: right;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018</span></h5>
           <p>Université de Sherbrooke</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>DEC en sciences de la santé</b></h5>
-          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
-          <p>Cégep Édouard-Montpetit</p><br>
+          <h5><b><span class="w3-opacity">DEC en sciences de la santé</span></b><span class="w3-text-indigo" style="text-align: right; float: right;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014</span></h5>
+          <p>Cégep Édouard-Montpetit</p>
+          <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Formation RCR (Professionnel de la santé/DEA (C) 5H)</b></h5>
-          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Août 2021</h6>
+          <h5><b><span class="w3-opacity">Formation RCR (Professionnel de la santé/DEA (C) 5H)</span></b><span class="w3-text-indigo" style="text-align: right; float: right;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021</span></h5>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5><b><span class="w3-opacity">Attestation de formation PDSB</span></b><span class="w3-text-indigo" style="text-align: right; float: right;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016</span></h5>
+          <br>
         </div>
       </div>
 
