Changer email, modifs langues

--- a/index.html
+++ b/index.html
@@ -31,28 +31,20 @@
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Infirmière clinicienne</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Saint-Basile-le-Grand, QC</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i><a href= "mailto:jannie.tetreault.hsj@ssss.gouv.qc.ca">jannie.tetreault.hsj@ssss.gouv.qc.ca</a></p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>514-917-4516</p>
-          <hr>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Infirmière clinicienne</p>
+            <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Saint-Basile-le-Grand, QC</p>
+            <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i><a href= "mailto:jannie.tetreault.hsj@ssss.gouv.qc.ca">jannie.tetreault@hotmail.ca</a></p>
+            <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>514-917-4516</p>
+            <hr>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Compétences informatiques</b></p>
-          <ul>
-            <li>Word</li>
-            <li>Excel</li>
-          </ul>
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-indigo"></i>Langues</b></p>
-          <p>Français</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-indigo" style="height:24px;width:100%"></div>
-          </div>
-          <p>Anglais</p>
-          <p>Cours de langue pour le personnel de la santé réussi au niveau intermédiaire (Université McGill).</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-indigo" style="height:24px;width:80%"></div>
-          </div>
-          <br>
+            <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-indigo"></i>Langues</b></p>
+
+            <ul>
+                <li>Français (langue maternelle)</li>
+                <li>Anglais (cours de langue de l'Université McGill pour le personnel de la santé réussi au niveau intermédiaire)</li>
+            </ul>
+
+            <br>
         </div>
       </div><br>
 
