--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <ul>
                 <li>Français (langue maternelle)</li>
-                <li>Anglais (cours de langue de l'Université McGill pour le personnel de la santé réussi au niveau intermédiaire)</li>
+                <li>Anglais (cours de l'Université McGill pour le personnel de la santé réussi au niveau intermédiaire)</li>
             </ul>
 
             <br>
