--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
       </div>
 
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Formation</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Formation</h2>
         <div class="w3-container">
           <h5><b><span class="w3-opacity">Baccalauréat en science infirmière &#8212; Formation initiale</span></b><span class="w3-text-indigo" style="text-align: right; float: right;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018</span></h5>
-          <p>Université de Sherbrooke</p>
+          <p><i class="fa-solid fa-university fa-fw w3-margin-right"></i>Université de Sherbrooke</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5><b><span class="w3-opacity">DEC en sciences de la santé</span></b><span class="w3-text-indigo" style="text-align: right; float: right;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014</span></h5>
-          <p>Cégep Édouard-Montpetit</p>
+          <p><i class="fa-solid fa-university fa-fw w3-margin-right"></i>Cégep Édouard-Montpetit</p>
           <hr>
         </div>
         <div class="w3-container">
